<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="es.studium.alejandromagnoapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="es.studium.alejandromagnoapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="es.studium.alejandromagnoapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_conquistas"
        android:name="es.studium.alejandromagnoapp.ui.conquistas.ConquistaFragment"
        android:label="@string/menu_conquistas"
        tools:layout="@layout/fragment_conquistas" />
    <fragment
        android:id="@+id/nav_legado"
        android:name="es.studium.alejandromagnoapp.ui.legado.LegadoFragment"
        android:label="@string/menu_legado"
        tools:layout="@layout/fragment_legado" />
</navigation>